@@ -1,7 +1,7 @@
 DEFINED_PHASES=compile configure install postinst preinst prepare setup unpack
 DEPEND=media-libs/libsdl[opengl,video] virtual/opengl
 DESCRIPTION=Swap and match 3 or more jewels in a line in order to score points
-EAPI=2
+EAPI=5
 HOMEPAGE=http://www.linuxmotors.com/gljewel/
 KEYWORDS=amd64 x86
 LICENSE=GPL-2
@@ -10,4 +10,4 @@ RESTRICT=test
 SLOT=0
 SRC_URI=http://www.linuxmotors.com/gljewel/downloads/SDL_jewels-1.1.1.tgz
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	998e5931fb95b10a6a11ec796ada2759	games	1ad3205dbf62a2c98249f2f59b0a2d39	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=965bdd7fab9979ddbd7db8d6c2cfe9a9
+_md5_=ed53fc80988205b282ba4ca222025912
