@@ -1,6 +1,9 @@
 # ChangeLog for games-puzzle/sdl-jewels
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/sdl-jewels/ChangeLog,v 1.3 2011/01/15 14:42:22 maekke Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/sdl-jewels/ChangeLog,v 1.4 2015/02/25 12:32:04 tupone Exp $
+
+  25 Feb 2015; Tupone Alfredo <tupone@gentoo.org> sdl-jewels-1.1.1.ebuild:
+  EAPI 5
 
   15 Jan 2011; Markus Meier <maekke@gentoo.org> sdl-jewels-1.1.1.ebuild:
   x86 stable, bug #350414
